--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   provider: ^6.1.5
   http: ^1.4.0
   flutter_markdown: ^0.7.7+1
+  flutter_bloc: ^9.1.1
 
 dev_dependencies:
   flutter_test:
